--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
@@ -35,11 +32,9 @@ dependencies {
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
     implementation 'com.arello-mobile:moxy-android:1.5.3'
     implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
-
     implementation('com.vk:androidsdk:1.6.5') { // Для работы с appcompact 7 28
         exclude group: "com.android.support"
     }
-
     implementation 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -47,4 +42,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //implementation 'com.andriod.support:recyclerview'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
