--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,10 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     //implementation 'com.andriod.support:recyclerview'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.2'
+
+
 }
