--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
+        classpath "io.realm:realm-gradle-plugin:3.5.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
